Update README.md and add tokenization article for LLMs

--- a/llm/tokenization.ipynb
+++ b/llm/tokenization.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Click [here]() to access the associated Medium article."
+    "Click [here](https://morihosseini.medium.com/from-characters-to-context-tokenization-in-llms-09b20abc42ed) to access the associated Medium article."
    ]
   },
   {
