--- a/eda/pivot-pandas.ipynb
+++ b/eda/pivot-pandas.ipynb
@@ -16,34 +16,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pandas in /Users/mori/Desktop/portfolio/.venv/lib/python3.11/site-packages (2.0.3)\n",
-      "Requirement already satisfied: matplotlib in /Users/mori/Desktop/portfolio/.venv/lib/python3.11/site-packages (3.7.2)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in /Users/mori/Desktop/portfolio/.venv/lib/python3.11/site-packages (from pandas) (2.8.2)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /Users/mori/Desktop/portfolio/.venv/lib/python3.11/site-packages (from pandas) (2023.3.post1)\n",
-      "Requirement already satisfied: tzdata>=2022.1 in /Users/mori/Desktop/portfolio/.venv/lib/python3.11/site-packages (from pandas) (2023.3)\n",
-      "Requirement already satisfied: numpy>=1.21.0 in /Users/mori/Desktop/portfolio/.venv/lib/python3.11/site-packages (from pandas) (1.24.3)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in /Users/mori/Desktop/portfolio/.venv/lib/python3.11/site-packages (from matplotlib) (1.1.0)\n",
-      "Requirement already satisfied: cycler>=0.10 in /Users/mori/Desktop/portfolio/.venv/lib/python3.11/site-packages (from matplotlib) (0.11.0)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /Users/mori/Desktop/portfolio/.venv/lib/python3.11/site-packages (from matplotlib) (4.40.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /Users/mori/Desktop/portfolio/.venv/lib/python3.11/site-packages (from matplotlib) (1.4.4)\n",
-      "Requirement already satisfied: packaging>=20.0 in /Users/mori/Desktop/portfolio/.venv/lib/python3.11/site-packages (from matplotlib) (23.0)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in /Users/mori/Desktop/portfolio/.venv/lib/python3.11/site-packages (from matplotlib) (9.5.0)\n",
-      "Requirement already satisfied: pyparsing<3.1,>=2.3.1 in /Users/mori/Desktop/portfolio/.venv/lib/python3.11/site-packages (from matplotlib) (2.4.7)\n",
-      "Requirement already satisfied: six>=1.5 in /Users/mori/Desktop/portfolio/.venv/lib/python3.11/site-packages (from python-dateutil>=2.8.2->pandas) (1.12.0)\n",
       "\u001b[33mDEPRECATION: textract 1.6.5 has a non-standard dependency specifier extract-msg<=0.29.*. pip 24.1 will enforce this behaviour change. A possible replacement is to upgrade to a newer version of textract or contact the author to suggest that they release a version with a conforming dependency specifiers. Discussion can be found at https://github.com/pypa/pip/issues/12063\u001b[0m\u001b[33m\n",
       "\u001b[0m"
      ]
     }
    ],
    "source": [
-    "!pip install pandas matplotlib"
+    "!pip install -q pandas matplotlib"
    ]
   },
   {
