Add Medium article link to pivot tables by pandas

--- a/eda/pivot-pandas.ipynb
+++ b/eda/pivot-pandas.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Click [here]() to access the associated Medium article."
+    "Click [here](https://morihosseini.medium.com/simplify-data-analysis-with-pandas-pivot-tables-73143c8f5b12) to access the associated Medium article."
    ]
   },
   {
