Add Medium article link

--- a/python/serialization.ipynb
+++ b/python/serialization.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Click [here]() to access the associated Medium article."
+    "Click [here](https://medium.com/@morihosseini/efficiency-and-simplicity-in-python-serialization-0a067f4c5836) to access the associated Medium article."
    ]
   },
   {
