--- a/python/builtin-advanced-2.ipynb
+++ b/python/builtin-advanced-2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Click [here]() to access the associated Medium article."
+    "Click [here](https://medium.com/@morihosseini/mastering-advanced-python-built-ins-76f10df01506) to access the associated Medium article."
    ]
   },
   {
