Add Medium article on yaml-vs-toml

--- a/configuration/yaml-vs-toml.ipynb
+++ b/configuration/yaml-vs-toml.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Click [here](https://morihosseini.medium.com/toml-vs-yaml-7ff0bb94e98f) to access the associated Medium article."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Setup"
    ]
   },
